[tool.poetry]
name = "autobots-fastapi"
version = "0.1.0"
description = ""
authors = ["Carlos Kidman <carlos@qap.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
